# DevOps-Final-Project

./: .env.example  .gitignore  API_AND_DATABASE_REFERENCE.md  BACKEND_MODELS_AND_SERIALIZERS.md  DEVOPS_PROJECT_DESIGN.md  DOCKER_AND_CICD_CONFIG.md  FRONTEND_REACT_CODE.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  README_AND_INDEX.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  create_superuser.py  pyproject.toml  requirements.txt  start.sh
backend/config/: settings.py  urls.py
backend/courses/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/courses/management/commands/: populate_mock_data.py
backend/courses/migrations/: 0001_initial.py
backend/exams/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/exams/migrations/: 0001_initial.py
backend/users/: models.py  urls.py  views.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CourseCard.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useApi.js
frontend/src/pages/: CourseDetail.jsx  Dashboard.jsx  ExamPage.jsx  Home.jsx  Login.jsx  Register.jsx  Results.jsx
frontend/src/services/: api.js
