[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "coverage==7.4.1",
    "django==4.2.8",
    "django-cors-headers==4.3.1",
    "django-filter==23.5",
    "djangorestframework==3.14.0",
    "flake8==6.1.0",
    "gunicorn==21.2.0",
    "pillow==10.1.0",
    "psycopg2-binary==2.9.9",
    "pytest==7.4.3",
    "pytest-django==4.7.0",
    "python-decouple==3.8",
    "whitenoise==6.6.0",
]
